--- a/staticfiles/assets/styles/style.css
+++ b/staticfiles/assets/styles/style.css
@@ -46,3 +46,7 @@
     50% {background-position: 100% 50%}
     100% {background-position: 0% 50%}
   }
+
+  .highlight-event {
+    font-weight: bold;
+}
