--- a/templates/community/base.html
+++ b/templates/community/base.html
@@ -58,15 +58,15 @@
                             {% endif %}
                         </li>
 
-                            <li class="nav-item">
-                                {% if user.is_authenticated %}
-                                <a class="nav-link" href="{% url 'search_events' %}">Search Events</a>
-                                {% endif %}
-                            </li>
-                            
+                        <li class="nav-item">
+                            {% if user.is_authenticated %}
+                            <a class="nav-link" href="{% url 'search_events' %}">Search Events</a>
+                            {% endif %}
+                        </li>
 
-                           
-                        
+
+
+
 
                         {% if user.is_authenticated %}
                         {% if user.profile.role == 'INSTRUCTOR' or user.profile.role == 'GOVERNMENT' %}
@@ -102,13 +102,13 @@
         </div>
     </header>
     <main id="main-background">
-    {% block content %}
-    <!-- Place for page content -->
-    {% endblock content %}
-</main>
+        {% block content %}
+        <!-- Place for page content -->
+        {% endblock content %}
+    </main>
     <!-- Footer content with copyright notice and social media links -->
     <!-- ... Footer content ... -->
-   <!-- Footer Section -->
+    <!-- Footer Section -->
     <footer class="footer bg-light m-0 ">
         <div class="container pt-3 pb-2">
             <!-- Flex container for aligning footer content -->
@@ -179,17 +179,16 @@
                 </div>
             </div>
         </div>
-        </div>
+        
     </footer>
     <!-- Loading FontAwesome and Bootstrap scripts -->
-    <script async defer 
-    id="aweb-script"
-    type="text/javascript"
-    src="https://ramp.accessibleweb.com/badge/CJ5sXzJn1LHeNMBEWTP5-Zh_FH3NmJT46srMaZsXdMU/script.js"></script> 
+    <script async defer id="aweb-script" type="text/javascript"
+        src="https://ramp.accessibleweb.com/badge/CJ5sXzJn1LHeNMBEWTP5-Zh_FH3NmJT46srMaZsXdMU/script.js"></script>
     <script src="https://kit.fontawesome.com/11665d5c0d.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
     </script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
