--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="col-12 row   d-flex justify-content-center align-items-center pb-3 border-0 rounded m-1">
+<div class="col-12 row gx-0  d-flex justify-content-center align-items-center pb-3 border-0 rounded m-1">
     <!-- Title and user-specific greeting -->
     <div class="col-8 container mt-4 d-flex d-md-none justify-content-center ">
         <h1 class="h1 text-center"> Welcome to <br> the Community <br> Center</h1>
@@ -29,15 +29,9 @@
     </div>
     {% endif %}
 </div>
-<div class="row d-flex d-md-none justify-content-center align-items-center ">
+<div class="row d-flex d-md-none  justify-content-center align-items-center ">
     <!-- Section displaying event categories and a carousel of event images -->
-    <div class="d-none  col-md-3 event-info">
-        <h2 class="text-center">Types of Events</h2>
-        <p class="text-center ">Maths Tutoring: Enhance your skills with expert tutors.Yoga for Wellness:
-            Stretch and strengthen your body.
-            Chess Championship: Showcase your strategic prowess. </p>
-        <p> And more .... </p>
-    </div>
+
     <div class="col-11  h-75">
         <div class="banner-container">
             <div id="bannerCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000">
@@ -83,8 +77,15 @@
             </div>
         </div>
     </div>
+    <div class=" col-10 bg-light event-info  border-0 rounded mb-2 mt-3 ">
+        <h2 class="text-center">Types of Events</h2>
+        <p class="text-center ">Maths Tutoring: Enhance your skills with expert tutors.Yoga for Wellness:
+            Stretch and strengthen your body.
+            Chess Championship: Showcase your strategic prowess. </p>
+        <p> And more .... </p>
+    </div>
 </div>
-<div class="d-none row  pb-4 d-md-flex justify-content-around">
+<div class="d-none row  pb-4 d-md-flex d-lg-none justify-content-around">
     <!-- Section displaying event categories and a carousel of event images -->
     <div class=" col-md-5 col-lg-4  ms-3 ps-2 event-info bg-light border-0 rounded">
         <h3 class="text-center mt-3 ">Types of Events</h3>
@@ -93,6 +94,66 @@
             Chess Championship: Showcase your strategic prowess.
             <br> And more ..... </p>
     </div>
+
+
+    <div class=" col-md-6 h-75">
+        <div class="banner-container">
+            <div id="bannerCarousel1" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000">
+                <div class="carousel-item active">
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521728/pexels-katerina-holmes-5905456_zkqiwh.jpg"
+                        class="d-block w-100" data-bs-event="maths-tutor" alt=" Maths Tutoring Event">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521726/pexels-yan-krukau-8436587_r5ahji.jpg"
+                        class="d-block w-100" data-bs-event="yoga" alt=" Yoga Event">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521726/pexels-alex-green-5692696_rlmgle.jpg"
+                        class="d-block w-100" data-bs-event="chess" alt=" Chess Event">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521724/pexels-%E7%A5%9D-%E9%B9%A4%E6%A7%90-716276_avkbnm.jpg"
+                        class="d-block w-100" data-bs-event="gallery" alt=" Gallery  Event">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521723/pexels-budgeron-bach-5149649_soauqj.jpg"
+                        class="d-block w-100" data-bs-event="dance" alt=" Dancing event">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521718/pexels-orkhan-shahbaz-18751164_vuz7uu.jpg"
+                        class="d-block w-100" data-bs-event="politic" alt=" Political  Event">
+                </div>
+                <div class="carousel-item">
+                    <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700521641/first-aid_mf3tfy.png"
+                        class="d-block w-100" data-bs-event="firstaid" alt=" First Aid  Event">
+                </div>
+                <button class="carousel-control-prev  standard opacity-0.05" id="carousel-button-next1" type="button"
+                    data-bs-target="#bannerCarousel1" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next standard opacity-0.05 " id="carousel-button-previous1"
+                    type="button" data-bs-target="#bannerCarousel1" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="d-none row  pb-4  d-lg-flex justify-content-around">
+    <!-- Section displaying event categories and a carousel of event images -->
+    <div class=" col-md-5 col-lg-5 col-xl-4  ms-3 ps-2 event-info bg-light border-0 rounded">
+        <h3 class="text-center mt-3 ">Types of Events</h3>
+        <p class="text-center">Explore a wide array of events at our Community Center. From yoga sessions led by expert instructors, chess tournaments to test your strategic thinking, to government-led workshops for civic engagement – we offer a diverse range of activities to enrich your lifestyle and community involvement.
+            <br> 
+            Our platform enables easy booking and scheduling, ensuring a seamless experience for instructors, government officials, and the public. Whether you're looking to enhance your skills, engage in community activities, or find a space for your event, our system simplifies the process.
+            <br> 
+            In addition to standard events, our center hosts special workshops and talks by industry experts, providing valuable insights and learning opportunities. Our user-friendly interface allows for efficient management of bookings and schedules, catering to the diverse needs of our community.
+        </p>
+    </div>
+
+
     <div class=" col-md-6 h-75">
         <div class="banner-container">
             <div id="bannerCarousel1" class="carousel slide" data-bs-ride="carousel" data-bs-interval="10000">
