--- a/templates/community/about.html
+++ b/templates/community/about.html
@@ -97,7 +97,7 @@
       </div>
       <div class="row mt-5 mb-3 pb-3 d-flex justify-content-center align-items-center border-none rounded carousel-inner ">
         <div class="col-8 mb-3 bg-light m-3 border-none rounded ">
-          <h2 class="share-our-page-title text-center m-3 ">Share our page</h2>
+          <h2 class="share-our-page-title text-center m-3 ">Share our page Coming Soon </h2>
         </div>
         <div class="col-12 mb-3">
           <div class="share-our-page-box p-4 m-5 rounded">
@@ -212,10 +212,9 @@
   </div>
 
 <script>
-  document.querySelector('.main-button').addEventListener('click', function () {
-    var shareContainer = document.getElementById('shareButtonContainer');
-    shareContainer.classList.toggle('active');
-  });
+document.querySelector('.main-button').addEventListener('click', function () {
+  var shareContainer = document.getElementById('shareButtonContainer');
+  shareContainer.classList.toggle('active');
+});
 </script>
-
 {% endblock content %}
