--- a/templates/community/booking.html
+++ b/templates/community/booking.html
@@ -59,6 +59,8 @@
                             <!-- Handling user booking status -->
                             {% if event.id in user_bookings %}
                             <button class="btn btn-secondary mb-2 btn-sm disabled"> Joined </button>
+                            {% elif event.capacity <= 1 %}
+                            <button class="btn btn-danger mb-2 btn-sm disabled">Fully Booked</button>
                             {% else %}
                             
                             <a href="{% url 'join_event' event.id %}"
